--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Vulpine/vendor/spdlog"]
 	path = Vulpine/vendor/spdlog
 	url = https://github.com/gabime/spdlog
+[submodule "Vulpine/vendor/GLFW"]
+	path = Vulpine/vendor/GLFW
+	url = https://github.com/Plomek1/glfw
